--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
-<h1>Test</h1>
+<h1>Website maintance</h1>
+
+<h2>DISCO is undergoing scheduled maintenance for approximately two days. During this time, 
+  the website may be unavailable or may experience intermittent disruptions. We apologize for any inconvenience and appreciate your patience.</h2>
+
+
+<h1>Follow us on twitter for more information: <a href="https://twitter.com/HSCRM2">https://twitter.com/HSCRM2</a></h1>
