--- a/index.html
+++ b/index.html
@@ -1,7 +1,16 @@
-<h1>Website maintance</h1>
+Dear Users,
 
-<h2>DISCO is undergoing scheduled maintenance for approximately two days. During this time, 
-  the website may be unavailable or may experience intermittent disruptions. We apologize for any inconvenience and appreciate your patience.</h2>
+I hope this message finds you well.
 
+I wanted to inform you that the DISCO server is currently experiencing technical issues. I’ve spent the past week trying to resolve the problem, but it appears to be a hardware issue with our data server, which is unfortunately beyond my ability to fix.
 
-<h1>Follow us on twitter/wechat for more information</h1>
+As a temporary solution, I’m in the process of migrating the data to my personal server to ensure continued access. This migration may take some time, and I sincerely appreciate your patience during this transition.
+
+Additionally, I’d like to share that I will soon be starting a new job. As a result, I may not be able to continue maintaining the DISCO platform on its current URL. However, I will host a personal mirror and do my best to keep the data available. I’ll share the updated URL or mirror link as soon as it’s ready.
+
+If you have any questions or need urgent access to data, please feel free to contact me at limengwei833@gmail.com.
+
+Thank you for your understanding and continued support.
+
+Best regards,
+Mengwei
