--- a/index.html
+++ b/index.html
@@ -1,16 +1,48 @@
-Dear Users,
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>DISCO Server Update</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      line-height: 1.6;
+      max-width: 700px;
+      margin: 40px auto;
+      padding: 20px;
+      border: 1px solid #ddd;
+      border-radius: 10px;
+      background-color: #f9f9f9;
+    }
+    h2 {
+      color: #333;
+    }
+    p {
+      margin-bottom: 16px;
+    }
+    .signature {
+      margin-top: 40px;
+    }
+  </style>
+</head>
+<body>
+  <h2>Dear Users,</h2>
 
-I hope this message finds you well.
+  <p>I hope this message finds you well.</p>
 
-I wanted to inform you that the DISCO server is currently experiencing technical issues. I’ve spent the past week trying to resolve the problem, but it appears to be a hardware issue with our data server, which is unfortunately beyond my ability to fix.
+  <p>I would like to inform you that the DISCO server is currently experiencing technical issues. I have spent the past week trying to resolve them, but it appears to be a hardware problem with our data server that I am unable to fix on my own.</p>
 
-As a temporary solution, I’m in the process of migrating the data to my personal server to ensure continued access. This migration may take some time, and I sincerely appreciate your patience during this transition.
+  <p>As a solution, I am working on migrating the data to my personal server to ensure continued access. This process may take some time, and I sincerely appreciate your patience during this transition.</p>
 
-Additionally, I’d like to share that I will soon be starting a new job. As a result, I may not be able to continue maintaining the DISCO platform on its current URL. However, I will host a personal mirror and do my best to keep the data available. I’ll share the updated URL or mirror link as soon as it’s ready.
+  <p>Additionally, I would like to share that I will soon be transitioning to a new job. As a result, I may not be able to actively maintain the DISCO platform at its current URL. However, I will keep a personal mirror and do my best to ensure the data remains accessible. I will share the new URL or mirror link as soon as it is available.</p>
 
-If you have any questions or need urgent access to data, please feel free to contact me at limengwei833@gmail.com.
+  <p>If you have any questions or need urgent access to the data, please feel free to contact me at <a href="mailto:limengwei833@gmail.com">limengwei833@gmail.com</a>.</p>
 
-Thank you for your understanding and continued support.
+  <p>Thank you for your understanding and continued support.</p>
 
-Best regards,
-Mengwei
+  <div class="signature">
+    <p>Best regards,</p>
+    <p>Mengwei</p>
+  </div>
+</body>
+</html>
