--- a/index.html
+++ b/index.html
@@ -30,20 +30,18 @@
 
   <p>I hope this message finds you well.</p>
 
-  <p>I would like to inform you that the DISCO server is currently experiencing technical issues. I have spent the past week trying to resolve them, but it appears to be a hardware problem with our data server that I am unable to fix on my own.</p>
+  <p>I am happy to inform you that the DISCO server has been partially restored and is accessible again.</p>
 
-  <p>As a solution, I am working on migrating the data to my personal server to ensure continued access. This process may take some time, and I sincerely appreciate your patience during this transition.</p>
+  <p>If you are still seeing this message, it means you are viewing a cached version of the site. Please try clearing your browser cache or directly visiting the new URL: <a href="https://disco.bii.a-star.edu.sg/" target="_blank">https://disco.bii.a-star.edu.sg/</a>.</p>
 
-  <p>Additionally, I would like to share that I will soon be transitioning to a new job. As a result, I may not be able to actively maintain the DISCO platform at its current URL. However, I will keep a personal mirror and do my best to ensure the data remains accessible. I will share the new URL or mirror link as soon as it is available.</p>
-
-  <p>If you have any questions or need urgent access to the data, please feel free to contact me at <a href="mailto:limengwei833@gmail.com">limengwei833@gmail.com</a>.</p>
+  <p>If you have any questions, please feel free to contact me at <a href="mailto:limengwei833@gmail.com">limengwei833@gmail.com</a>.</p>
 
   <p>Thank you for your understanding and continued support.</p>
 
   <div class="signature">
     <p>Best regards,</p>
     <p>Mengwei</p>
-    <p>22 March 2025</p>
+    <p>29 March 2025</p>
   </div>
 </body>
 </html>
